force-app/main/default/objects/PaymentReceipt__c/PaymentReceipt__c.object-meta.xml
<CustomObject>
    <label>Payment Receipt</label>
    <nameField>
        <displayFormat>PAR-{000000}</displayFormat>
        <label>Payment Receipt REF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PaymentReceipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>