force-app/main/default/objects/PaymentReceipt__c/fields/GLDate__c.field-meta.xml
<CustomField>
    <fullName>GLDate__c</fullName>
    <description>For send to Pojjaman</description>
    <formula>Opportunity__r.ClosedLostDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Date</label>
    <type>Date</type>
</CustomField>