force-app/main/default/objects/PaymentReceipt__c/fields/IsCancel__c.field-meta.xml
<CustomField>
    <fullName>IsCancel__c</fullName>
    <formula>if( ISBLANK(Text(CancelReason__c)),false,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cancel</label>
    <type>Checkbox</type>
</CustomField>