force-app/main/default/objects/PaymentReceipt__c/fields/LastCancelledStatusInPojjaman__c.field-meta.xml
<CustomField>
    <fullName>LastCancelledStatusInPojjaman__c</fullName>
    <description>to determine cancelled status after integrate with Pojjaman</description>
    <label>Last Cancelled Status In Pojjaman</label>
    <length>255</length>
    <type>Text</type>
</CustomField>