force-app/main/default/objects/PaymentReceipt__c/fields/LastCreatedStatusInPojjaman__c.field-meta.xml
<CustomField>
    <fullName>LastCreatedStatusInPojjaman__c</fullName>
    <description>To determine created status after integrate Receipt to Pojjaman</description>
    <label>Last Created Status In Pojjaman</label>
    <length>255</length>
    <type>Text</type>
</CustomField>