force-app/main/default/objects/PaymentReceipt__c/fields/LastIntegrationDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastIntegrationDateTime__c</fullName>
    <label>LastIntegrationDateTime</label>
    <type>DateTime</type>
</CustomField>