force-app/main/default/objects/PaymentReceipt__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>