force-app/main/default/objects/PaymentReceipt__c/fields/ReceiptNo__c.field-meta.xml
<CustomField>
    <fullName>ReceiptNo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>เลขที่ใบเสร็จ</description>
    <externalId>true</externalId>
    <label>Receipt no.</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>