force-app/main/default/objects/PaymentReceipt__c/fields/ReceivedAmount__c.field-meta.xml
<CustomField>
    <fullName>ReceivedAmount__c</fullName>
    <label>Received Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>