force-app/main/default/objects/PaymentReceipt__c/fields/TotalReceiveAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalReceiveAmount__c</fullName>
    <label>Total Receive Amount</label>
    <summarizedField>PaymentReceiptLineItem__c.ReceivedAmount__c</summarizedField>
    <summaryForeignKey>PaymentReceiptLineItem__c.PaymentReceipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>