force-app/main/default/objects/PaymentReceipt__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Payment Receipt</relationshipLabel>
    <relationshipName>Payment_Receipt</relationshipName>
    <type>Lookup</type>
</CustomField>