force-app/main/default/objects/PaymentReceipt__c/recordTypes/PaymentReceipt.recordType-meta.xml
<RecordType>
    <fullName>PaymentReceipt</fullName>
    <active>true</active>
    <label>Payment Receipt</label>
</RecordType>