force-app/main/default/objects/PaymentReceipt__c/validationRules/RecheckCancelReason.validationRule-meta.xml
<ValidationRule>
    <fullName>RecheckCancelReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( CancelReason__c ,&quot;Cancel by CRM&quot;),
ISBLANK( CancelReasonforCRM__c )
)</errorConditionFormula>
    <errorDisplayField>CancelReasonforCRM__c</errorDisplayField>
    <errorMessage>Please input cancel reason.</errorMessage>
</ValidationRule>