force-app/main/default/objects/PaymentReceipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>ProjectName__c</columns>
    <columns>UnitName__c</columns>
    <columns>DueDate__c</columns>
    <columns>PaymentMethod__c</columns>
    <columns>ReceivedAmount__c</columns>
    <columns>Term__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>